.horusec/0efc11ad-f83f-4da3-82a1-ab8e3b0b76fa/canary.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: canary-deployment
  labels:
    app: canary
spec:
  replicas: 1
  selector:
    matchLabels:
      app: canary
  template:
    metadata:
      labels:
        app: canary
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - stable
              topologyKey: "kubernetes.io/hostname"
      containers:
      - name: canary
        image: facundoberra/canarioimagen:latest  #imagen canary
        ports:
        - containerPort: 80
