.horusec/0efc11ad-f83f-4da3-82a1-ab8e3b0b76fa/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stable-deployment
  labels:
    app: stable
spec:
  replicas: 3
  selector:
    matchLabels:
      app: stable
  template:
    metadata:
      labels:
        app: stable
    spec:
      containers:
      - name: stable
        image: facundoberra/stableimagen:latest  # Imagen Estable
        ports:
        - containerPort: 80
