.horusec/0efc11ad-f83f-4da3-82a1-ab8e3b0b76fa/serviceDeployment.yml
apiVersion: v1
kind: Service
metadata:
  name: stable-service
spec:
  selector:
    app: stable
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8088
