.horusec/0efc11ad-f83f-4da3-82a1-ab8e3b0b76fa/ingressController.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-by-header: "Canary"
    nginx.ingress.kubernetes.io/canary-by-header-value: "always"
    nginx.ingress.kubernetes.io/canary-weight: "10"  # 10% del tráfico va a la versión canary
spec:
  rules:
  - host: my-app.local  # IP propia de minikube (192.168.43.2 AGREGARLA EN HOSTS DE WINDOWS SYSTEMS32, DRIVERS, ETC, HOSTS)
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: stable-service  # El 90% del tráfico irá aquí
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: canary-service  # El 10% del tráfico irá aquí
            port:
              number: 80
